--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 server.port=8081
 
 spring.batch.job.enabled=false
+
+input=file:/home/idd_mpedroso/Documentos/Cintia/repo/spring/spring-batch-example/src/main/resources/users.csv
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:~/batch
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
