Altera git.ignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.batch.job.enabled=false
 
-input=file:/home/idd_mpedroso/Documentos/Cintia/repo/spring/spring-batch-example/src/main/resources/users.csv
+input=file:/home/***/spring-batch-example/src/main/resources/users.csv
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
